[gd_scene load_steps=2 format=3 uid="uid://cqumuvwa83uj6"]

[ext_resource type="Script" uid="uid://cty3igweawyet" path="res://addons/quest_weaver/nodes/action/event_node/event_node_editor.gd" id="1_6a2ip"]

[node name="EventNodeEditor" type="VBoxContainer"]
offset_right = 127.0
offset_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6a2ip")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="EventLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Event: "

[node name="SignalNameEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "\"Payload\" data is optional information sent along with the event name.

Use it to:
• Send context (e.g., {\"door_id\": \"Gate_A\"})
• Pass variable values to game code
• Trigger specific game logic based on the quest's state

The Event Listener Node can read and act on this data."

[node name="AddPayloadButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "\"Payload\" data is optional information sent along with the event name.

Use it to:
• Send context (e.g., {\"door_id\": \"Gate_A\"})
• Pass variable values to game code
• Trigger specific game logic based on the quest's state

The Event Listener Node can read and act on this data."
text = "Add Payload"

[node name="PayloadListContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="."]
layout_mode = 2

[node name="TerminalCheckBox" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Disables Output-Port(s). Helps to avoid warnings in the validator."
text = "End of Flow"
